# src/routes/lib/appointment.routes.js
@@ -8,7 +8,7 @@ import { verifyJwt } from "../../middlewares/index.js";
 const appointmentRouter = Router();
 
 appointmentRouter.post("/add/:id", verifyJwt, createNewAppointment)
-appointmentRouter.post("/payment/:id", verifyJwt, AddPaymentShedule)
+appointmentRouter.post("/add/payment/:id", verifyJwt, AddPaymentShedule);
 
 
 export default appointmentRouter;
