# swagger.json
@@ -136,7 +136,6 @@
           "uId"
         ]
       },
-
       "Appointment": {
         "type": "object",
         "properties": {
@@ -235,10 +234,37 @@
           }
         },
         "required": ["nCode", "nCreatedAt"]
+      },
+      "Payment":{
+        "type": "object",
+        "properties": {
+          "nCharges": {
+            "type": "integer",
+            "description": "Number of charges",
+            "minimum": 1
+          },
+          "sRepayment": {
+            "type": "string",
+            "description": "Repayment schedule",
+            "default": "Daily",
+            "enum": ["Daily", "Weekly", "Monthly"]
+          },
+          "apponintmentId": {
+            "type": "string",
+            "description": "ID of the appointment",
+            "format": "objectID"
+          }
+        },
+        "required": ["nCharges", "sRepayment", "apponintmentId"]
       }
     },
-    "securitySchemes": { 
-      "bearerAuth": { "type": "http", "scheme": "bearer", "bearerFormat": "JWT" } },
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    },
     "security": [
       {
         "bearerAuth": []
@@ -269,8 +295,7 @@
                 "example": {
                   "statusCode": 200,
                   "data": {
-                    "accessToken": "flskdjfljojlkjdj",
-                    "code": "123456"
+                    "accessToken": "flskdjfljojlkjdj"
                   },
                   "message": "code is sent",
                   "success": true
@@ -437,8 +462,7 @@
                 "example": {
                   "statusCode": 200,
                   "data": {
-                    "message": "code is sent",
-                    "code": "123456"
+                    "message": "code is sent"
                   },
                   "message": "success",
                   "success": true
@@ -463,7 +487,40 @@
           "content": {
             "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/Users"
+                "type": "object",
+                "properties": {
+                  "sAvatar": {
+                    "type": "file",
+                    "description": "User's avatar",
+                    "example": "avatar.jpg"
+                  },
+                  "sFirstName": {
+                    "type": "string",
+                    "description": "User's first name",
+                    "minLength": 3,
+                    "example": "John"
+                  },
+                  "sLastName": {
+                    "type": "string",
+                    "description": "User's last name",
+                    "minLength": 3,
+                    "example": "Doe"
+                  },
+                  "sWhatsAppBussinessNumber": {
+                    "type": "string",
+                    "description": "User's WhatsApp business number",
+                    "minLength": 13,
+                    "maxLength": 16,
+                    "pattern": "^\\+(?:[0-9] ?){6,14}[0-9]$",
+                    "example": "+1234567890123"
+                  }
+                },
+                "required": [
+                  "sAvatar",
+                  "sFirstName",
+                  "sLastName",
+                  "sWhatsAppBussinessNumber"
+                ]
               }
             }
           }
@@ -596,7 +653,7 @@
             "required": true,
             "schema": {
               "type": "string",
-              "format": "uuid"
+              "format": "guid"
             }
           }
         ],
@@ -767,6 +824,137 @@
           },
           "404": {
             "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/appointment/add/{id}": {
+      "post": {
+        "summary": "Add appointments",
+        "description": "This is the api for adding a patient's appointments",
+        "tags": ["Appointment"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Patient ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "guid"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "sToTreat": "2024-03-01T11:49:00.948Z",
+                "dFromDate": "2024-03-01T11:49:00.948Z",
+                "dToDate": "2024-03-01T11:49:00.948Z",
+                "dtFromTime": "2024-03-01T11:49:00.948Z",
+                "dtToTime": "2024-03-01T11:49:00.948Z",
+                "oRepeat": {
+                  "sFrequency": "weekly",
+                  "nEvery": "3",
+                  "sRepeatDuration": ["m", "t", "f"]
+                },
+                "sNote": "important note"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "example": {
+                  "statusCode": 201,
+                  "data": {
+                    "pId": "52lkjlakdfj020lkdf20",
+                    "sToTreat": "2024-03-01T11:49:00.948Z",
+                    "dFromDate": "2024-03-01T11:49:00.948Z",
+                    "dToDate": "2024-03-01T11:49:00.948Z",
+                    "dtFromTime": "2024-03-01T11:49:00.948Z",
+                    "dtToTime": "2024-03-01T11:49:00.948Z",
+                    "oRepeat": {
+                      "sFrequency": "weekly",
+                      "nEvery": "3",
+                      "sRepeatDuration": ["m", "t", "f"]
+                    },
+                    "sNote": "important note"
+                  },
+                  "message": "Patient is successfully added",
+                  "success": true
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/appointment/add/payment/{id}": {
+      "post": {
+        "summary": "Add payment for appointments",
+        "description": "This is the api for adding a patient's appointments payment",
+        "tags": ["Appointment"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Appointment ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "guid"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "nCharges": "5000",
+                "sRepayment": "Weekly"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "example": {
+                  "statusCode": 201,
+                  "data": {
+                    "nCharges": "5000",
+                    "sRepayment": "Weekly"
+                  },
+                  "message": "Patient is successfully added",
+                  "success": true
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
